fix z-index priority for parent menu items
fixes #2702

--- a/app/assets/stylesheets/active_admin/_header.css.scss
+++ b/app/assets/stylesheets/active_admin/_header.css.scss
@@ -75,7 +75,6 @@
       &.has_nested > a {
         background: url(active_admin_image_path('nested_menu_arrow.gif')) no-repeat 89% 50%;
         padding-right: 20px;
-        z-index: 1050;
       }
 
       &.has_nested.current > a {
@@ -92,6 +91,7 @@
         @include rounded-top(10px);
         border-bottom: 5px solid $hover-menu-item-background;
         background: $hover-menu-item-background url(active_admin_image_path('nested_menu_arrow_dark.gif')) no-repeat 89% 50%;
+        z-index: 1020;
       }
 
 
@@ -109,7 +109,7 @@
         display: none;
         padding: 3px 0px 5px 0;
         list-style: none;
-        z-index: 1010;
+        z-index: 1051;
 
         li {
           margin: 0px;
